--- a/WD_INNOVATIVE/header.css
+++ b/WD_INNOVATIVE/header.css
@@ -1,7 +1,7 @@
 #first{
 	width: 97.1%;
 	height: 50px;
-	background-color: rgba(44, 62, 80,.8);
+	background-color: black;
 	position: fixed;
 	padding: 20px;
 	top: 0;
